# swimmeret

skill/: SKILL.md  pyproject.toml
skill/scripts/: swimmeret
